[package]
name = "rust-io"
version = "0.1.0"
authors = ["johnpyp <johnpaulpenaloza@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8", features = ["serde", "v4"] }
rayon = "1.3.1"
crossbeam-channel = "0.4.2"
